--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,9 @@
 :root {
     --colorPrincipal: #01316D;
+    --blue: #007bff;
+    --titulo: #53a6d5;
+    --Ftitulo: font-family: 'Montserrat', sans-serif;
+    ;
 }
 
 html {
@@ -10,4 +14,80 @@ html {
 *:before,
 *:after {
     box-sizing: inherit;
+}
+
+
+/** generales **/
+
+
+/** IMAGEN PRODUCTO **/
+
+
+/* 
+.parrafo {
+    margin-left: 10px;
+    text-align: justify;
+    width: 300px;
+    height: 50px;
+} */
+
+.margen {
+    width: 250px;
+    height: 90%;
+}
+
+.margen h2 {
+    text-transform: uppercase;
+    align-items: center;
+    color: var(--titulo);
+    text-shadow: 0 0 1px var(--colorPrincipal);
+    font-family: var(--Ftitulo);
+    font-weight: 800;
+    font-size: 1.5rem;
+}
+
+.margin p {
+    font-weight: 400;
+    font-family: var(--Ftitulo);
+}
+
+.margen h4 {
+    text-transform: uppercase;
+    color: var(--blue);
+    text-shadow: 0 0 2px var(--colorPrincipal);
+}
+
+.img-product {
+    width: 100%;
+    height: 200px;
+}
+
+.contenedor-flex {
+    max-width: 1100px !important;
+    margin: 0 auto;
+}
+
+.menu_categoria {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 4rem;
+}
+
+.categoria:hover {
+    -webkit-transform: scale(1.1);
+}
+
+.cantidad {
+    font-family: var(--Ftitulo);
+    color: var(--blue);
+    text-shadow: 0 0 2px var(--colorPrincipal);
+    text-transform: uppercase;
+}
+
+.cantidad input {
+    width: 70px;
+    margin-left: 15px;
+    border-radius: 2px;
+    border-color: var(--titulo);
 }
